# connection-layer

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/connection-layer/: incoming.h  outgoing.h
src/lib/: CMakeLists.txt  incoming.c  outgoing.c
src/tests/: CMakeLists.txt  main.c  test.c
